OIC: fix btn alignment for absent copyright field

--- a/src/components/blocks/object-image-overlay/_object-image-overlay.scss
+++ b/src/components/blocks/object-image-overlay/_object-image-overlay.scss
@@ -135,7 +135,7 @@
     margin: 0 -60px 0 auto;
 
     @include mixins.breakpoints-bpMinMedium {
-      margin: 0;
+      margin-right: 0;
       text-align: right;
     }
   }
